New update oct 3

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
 
 
 
+
+
+
 h1 {
   font-family: 'Homemade Apple', cursive;
   font-size: 50px;
@@ -36,6 +39,7 @@ body {
   overflow-x: hidden;
   text-align: left;
    display: grid;
+   padding-left: 3em;
 }
 
 
@@ -49,8 +53,6 @@ img {
 header {
 
   min-height: 100vh;
-  background-color: #001a00;
-  background: linear-gradient(to bottom, #001a00 0%, #ffffff 100%);
   position: absolute;
   top: 0;
   left: 0;
@@ -59,12 +61,16 @@ header {
   align-items: center;
   justify-content: center;
 
+
+
 }
+ 
+
 
 
 main {
   position: relative;
-  margin-top: 110vh;
+  margin-top: 90vh;
   max-width: 70em;
   margin-left: auto;
   margin-right: auto;
@@ -202,8 +208,8 @@ nav {
   top: 0;
   right: 0;
   z-index: 2;
-  color: #778899;
-  will-change: color:;
+  color: #000000;
+  
 
 }
 
@@ -212,6 +218,8 @@ nav a {
   text-decoration: none;
   padding: 1em 2em;
   display: inline-block;
+  color: #000000;
+  font-weight: bold;
 }
 
 
@@ -322,5 +330,35 @@ video {
 
 .image  a:hover {
     display: block;
+}
+
+#myVideo {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.video video, .overlay img {
+   width:100%;
+  height:200%;
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  object-fit:cover;
+} 
+
+.overlay img {
+  z-index:1;
+}
+
+#logo {
+  width: 1000%;
+  height: 50%;
+  position: center;
+  padding-top: 7em;
 }
 
