--- a/styles.css
+++ b/styles.css
@@ -343,12 +343,14 @@ video {
 
 .video video, .overlay img {
    width:100%;
-  height:200%;
+  height:110%;
   position:absolute;
   top:0;
   left:0;
   right:0;
   object-fit:cover;
+  object-position: center center;
+
 
 
 } 
@@ -357,12 +359,14 @@ video {
   z-index:1;
 }
 
-#logo {
+#logo  {
   width: 1000%;
   height: 50%;
   position: center;
   padding-top: 7em; 
-   min-width: 480px;
+  min-width: 480px;
+  object-position: center center;
+   object-fit:cover;
    
 }
 @media screen and (max-width: 481px){
